--- a/trendy_backend/requirements.txt
+++ b/trendy_backend/requirements.txt
@@ -1,9 +1,65 @@
-fastapi
-uvicorn
-sqlalchemy
-python-jose
-passlib[bcrypt]
-python-multipart
-aiofiles
-openai
-firebase-admin
+# Core FastAPI
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+aiofiles==23.2.1
+
+# Database
+sqlalchemy==2.0.23
+alembic==1.12.1
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
+
+# Authentication & Security
+firebase-admin==6.2.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-dotenv==1.0.0
+
+# API & HTTP
+httpx==0.25.2
+aiohttp==3.9.1
+requests==2.31.0
+
+# AI & ML
+openai==1.3.8
+transformers==4.36.2
+torch==2.1.2
+sentence-transformers==2.2.2
+
+# Cache & Queue
+redis==5.0.1
+celery==5.3.4
+
+# Monitoring & Logging
+sentry-sdk[fastapi]==1.38.0
+prometheus-client==0.19.0
+
+# File Upload & Processing
+pillow==10.1.0
+boto3==1.34.0
+
+# Validation & Serialization
+pydantic[email]==2.5.2
+email-validator==2.1.0
+
+# External APIs
+spotipy==2.23.0
+google-api-python-client==2.108.0
+
+# Push Notifications
+firebase-admin==6.2.0
+
+# Real-time
+python-socketio==5.10.0
+agora-token-builder==1.0.0
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+
+# Development
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0
+mypy==1.7.1
