--- a/trendy_backend/requirements.txt
+++ b/trendy_backend/requirements.txt
@@ -24,7 +24,7 @@ requests==2.31.0
 # AI & ML
 openai==1.3.8
 transformers==4.36.2
-torch==2.1.2
+torch==2.2.0
 sentence-transformers==2.2.2
 
 # Cache & Queue
@@ -46,6 +46,7 @@ email-validator==2.1.0
 # External APIs
 spotipy==2.23.0
 google-api-python-client==2.108.0
+google-ads==23.0.0
 
 # Push Notifications
 firebase-admin==6.2.0
