--- a/trendy_backend/requirements.txt
+++ b/trendy_backend/requirements.txt
@@ -1,67 +1,19 @@
-# Core FastAPI
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-aiofiles==23.2.1
-
-# Database
-sqlalchemy==2.0.23
-alembic==1.12.1
-asyncpg==0.29.0
-psycopg2-binary==2.9.9
-
-# Authentication & Security
-firebase-admin==6.2.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
-google-auth==2.26.1
-
-# API & HTTP
-httpx==0.25.2
-aiohttp==3.9.1
-requests==2.31.0
-
-# AI & ML
-openai==1.3.8
-transformers==4.36.2
-torch==2.2.0
-sentence-transformers==2.2.2
-
-# Cache & Queue
-redis==5.0.1
-celery==5.3.4
-
-# Monitoring & Logging
-sentry-sdk[fastapi]==1.38.0
-prometheus-client==0.19.0
-
-# File Upload & Processing
-pillow==10.1.0
-boto3==1.34.0
-
-# Validation & Serialization
-pydantic[email]==2.5.2
-email-validator==2.1.0
-
-# External APIs
-spotipy==2.23.0
-google-api-python-client==2.108.0
-google-ads==23.0.0
-
-# Push Notifications
-firebase-admin==6.2.0
-
-# Real-time
-python-socketio==5.10.0
-agora-token-builder==1.0.0
-
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-
-# Development
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
-mypy==1.7.1
+fastapi==0.68.0
+uvicorn==0.15.0
+sqlalchemy==1.4.23
+pydantic==1.8.2
+python-multipart==0.0.5
+email-validator==1.1.3
+fastapi-mail==1.2.0
+firebase-admin==5.0.3
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==3.2.0
+httpx==0.18.2
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+google-auth-httplib2==0.1.0
+stripe==2.60.0
+psycopg2-binary==2.9.1
+alembic==1.7.3
+python-dotenv==0.19.0
